--- a/src/components/features/Roulette/Roulette.module.scss
+++ b/src/components/features/Roulette/Roulette.module.scss
@@ -159,7 +159,7 @@
     position: fixed;
     top: -300px;
     right: 0;
-    z-index: 99;
+    z-index: 999;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     display: flex;
@@ -169,6 +169,7 @@
 
   .canvas_wrapper {
     scale: 0.7;
+    position: absolute;
     z-index: 99;
   }
 
